<resources>
    <string name="app_name">surveyNow</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_create_form">Create formulaire :</string>
    <string name="btn_cancel">Annuler</string>
    <string name="btn_create">Creer</string>
    <string name="labelName">Nom du formulaire</string>
    <string name="labelAutor">Auteur</string>
    <string name="labelDescription">Description</string>
    <string name="labelQuestion">Questions :</string>
    <string name="btnAddQuestion">Ajouter un question</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="titleListForm">Formulaires :</string>
</resources>